# agentmem

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.playwright-mcp/: page-2026-04-07T14-02-15-276Z.yml
docs/superpowers/specs/: 2026-04-06-agentmem-spec.md  2026-04-07-agentmem-execution-spec.md
examples/: bootstrap_facets.sh
src/agentmem/: __init__.py  model_routes.py
src/agentmem/adapters/: __init__.py
src/agentmem/adapters/embeddings/: __init__.py  hash.py  ollama.py
src/agentmem/adapters/events/: __init__.py  local.py  pg_listen.py  (+1 more)
src/agentmem/cli/: __init__.py  client.py  main.py
src/agentmem/core/: __init__.py  active_context.py  digests.py  embeddings.py  evidence.py  facets.py  graph.py  models.py  protocols.py  router.py  services.py
src/agentmem/service/: __init__.py  app.py  config.py
src/agentmem/workers/: __init__.py  coordinator.py  triggers.py
tests/: __init__.py  conftest.py  test_cli.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_adapters.py  test_admin_api.py  test_cli.py  test_ingest_api.py  test_model_routes.py  test_service_config.py
tests/unit/adapters/: test_hash.py
tests/unit/core/: __init__.py  test_active_context.py  test_digests.py  test_domain.py  test_embeddings.py  test_evidence.py  test_router.py  test_services.py  test_webhook_adapter.py
tests/unit/service/: __init__.py  test_api_admin.py  test_api_ingest.py  test_api_retrieval.py
tests/unit/workers/: __init__.py  test_active_context_job.py  test_coordinator.py  test_digest_job.py  test_jobs.py  test_retention.py
(+23 files in other folders)
