[project]
name = "agentmem"
version = "0.1.0"
description = "A generic, pluggable agent memory system"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Braydon McCormick" },
]
dependencies = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "pgvector>=0.3",
]

[project.optional-dependencies]
ollama = ["httpx>=0.27"]
openai = ["openai>=1.30"]
service = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
all = [
    "agentmem[ollama,openai,service,cli]",
]

[project.scripts]
am = "agentmem.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentmem"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    "croniter>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["agentmem"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true